<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="@string/pref_location_name_key"
        android:title="@string/pref_location_name_title"
        android:defaultValue="@string/pref_location_name_default" />

    <Preference
        android:title="@string/item_rate_settings_activity"
        android:key="@string/item_rate_settings_activity"
        />

    <Preference
        android:title="@string/item_suggest_settings_activity"
        android:key="@string/item_suggest_settings_activity"
        />

    <Preference
        android:title="@string/item_share_settings_activity"
        android:key="@string/item_share_settings_activity"
        />

    <!--android:dialogTitle="@string/pref_location_choices_dialog_title"-->
    <!--android:entries="@array/pref_location_choices"-->
    <!--android:entryValues="@array/pref_location_choices_values"-->
                       
    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />

    <ListPreference
        android:defaultValue="@string/pref_pressure_units_HPa"
        app:entries="@array/pref_pressure_units_values"
        android:entryValues="@array/pref_pressure_units_options"
        android:key="@string/pref_pressure_units_key"
        android:title="@string/pref_pressure_units_label"
        />

    <!--NOTIFICATIONS ENABLED with icon-->
    <CheckBoxPreference
        android:key="@string/pref_notifications_enabled_key"
        android:title="@string/pref_notifications_enabled_title"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="@string/pref_random_wallpapers_enabled"
        android:title="@string/pref_random_wallpapers_enabled_title"
        android:defaultValue="false"
        />
</PreferenceScreen>