<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/today_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="#00000000">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/touch_selector">

        <!--TODO: textSize needs to be adjusted along with layout_height-->
        <TextView
            android:id="@+id/currentTemp"
            style="@style/MaterialTypography.Tall.Display3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="@color/white"
            android:typeface="sans"
            tools:text="22" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/content_description_ForecastItem_weather_icon" />

            <TextView
                android:id="@+id/description"
                style="@style/CardMedium"
                tools:text="description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/temp_up"
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="1dp"
                    android:contentDescription="@string/content_description_ForecastItem_max_temp" />

                <TextView
                    android:id="@+id/maxTemp"
                    style="@style/CardMedium"
                    tools:text="maxTemp" />

                <ImageView
                    android:src="@drawable/temp_down"
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="1dp"
                    android:contentDescription="@string/content_description_ForecastItem_min_temp_icon" />

                <TextView
                    android:id="@+id/minTemp"
                    style="@style/CardMedium"
                    tools:text="minTemp"/>

            </LinearLayout>
            <TextView
                style="@style/CardSmall"
                android:gravity="end|bottom"
                android:layout_gravity="end|bottom"
                android:textSize="12sp"
                android:layout_weight="1"
                android:text="@string/textview_ForecastItem_photo_credits"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                style="@style/CardSmall"
                tools:text="time"
                android:layout_weight="6"/>
            <TextView
                android:layout_width="0dp"
                android:id="@+id/photo_credits"
                android:gravity="bottom|end"
                android:layout_gravity="bottom|end"
                style="@style/CardSmall"
                android:textSize="12sp"
                android:layout_weight="4"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="photo by Vaibhav on Unsplash"
                android:text="@string/dummy_photo_credits_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/date"
                style="@style/CardSmall"
                tools:text="date" />

            <TextView
                style="@style/CardSmall"
                android:gravity="top|end"
                android:layout_gravity="top|end"
                android:textSize="12sp"
                android:layout_weight="1"
                android:text="@string/unsplash_credits"/>
        </LinearLayout>
    </LinearLayout>

    </FrameLayout>
</android.support.v7.widget.CardView>